--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@
     --background-button-color: #F5F4FA;
     --background-footer: #2F303A;
     --icon-color: #afb1b8;
+    --color-red: red;
+
+    --time-cubic: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -76,6 +79,7 @@ body {
 
 .link {
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -129,9 +133,11 @@ body {
     letter-spacing: 0.03em;
 
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-top {
     color: var(--webstudio-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo:hover, .logo:focus,
@@ -165,6 +171,7 @@ body {
     letter-spacing: 0.02em;
 
     color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-portfolio {
@@ -175,6 +182,7 @@ body {
     letter-spacing: 0.02em;
 
     color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-contact {
@@ -185,6 +193,7 @@ body {
     letter-spacing: 0.02em;
 
     color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 
@@ -236,6 +245,7 @@ body {
     margin-right: 10px;
     fill: var(--title-text-color);
     color: var(--title-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-icon-tel {
@@ -244,6 +254,7 @@ body {
 
     margin-right: 10px;
     fill: var(--title-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-mt {
@@ -259,12 +270,13 @@ body {
     letter-spacing: 0.02em;
 
     color:var(--title-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .auth-mt:hover,
 .auth-mt:focus{
     color: var(--accent-color);
-} 
+}
 
 .auth-mt:hover .auth-icon-mail,
 .auth-mt:focus .auth-icon-mail,
@@ -321,6 +333,7 @@ body {
 
     color: var(--hero-text-color);
     background: var(--accent-background-color);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     display: inline-block;
     border-radius: 4px;
@@ -330,7 +343,6 @@ body {
     border: 1px solid transparent;
 
     cursor: pointer;
-
 }
 
 .button:hover, .button:focus {
@@ -488,6 +500,9 @@ body {
     border-radius: 50%;
     background-color: var(--background-color);
     fill: var(--icon-color);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    
 }
 
 .link-team:hover,
@@ -499,6 +514,7 @@ body {
 .team-icon {
     width: 20px;
     height: 20px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* --- постійні клієнти --- */
@@ -516,7 +532,8 @@ body {
 .link-icon {
     fill: #AFB1B8;
     width: 106px; 
-    height: 60px;    
+    height: 60px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client {
@@ -528,6 +545,7 @@ body {
     border-radius: 4px;
     width: 170px;
     height: 92px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client:hover,
@@ -550,6 +568,7 @@ body {
     padding-bottom: 60px;
     background: var(--background-footer);
 }
+
 /* ---логотип--- */
 
 
@@ -557,6 +576,7 @@ body {
     display: inline-block;
     margin-bottom: 20px;
     color: var(--hero-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo > .link-bottom {
@@ -569,9 +589,11 @@ body {
     letter-spacing: 0.03em;
 
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo-bottom:hover, .logo-bottom:focus 
+.logo-bottom:hover, .logo-bottom:focus,
+.logo:hover, .logo:focus 
 {
     color: var(--accent-color);
 }
@@ -658,6 +680,7 @@ body {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     fill: var(--hero-text-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .bottom-link-team:hover, .bottom-link-team:focus {
@@ -666,7 +689,7 @@ body {
 
 
 
-/* !--- поротфоліо --- інша сторінка --- */
+/* !--- поротфоліо --- */
 
 /* --- фільтр --- */
 
@@ -686,6 +709,10 @@ body {
     list-style: none;
 }
 
+.btn-text {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .btn-link {
     padding: 6px 22px;
     text-align: center;
@@ -699,6 +726,7 @@ body {
     
     color: var(--primary-text-color);
     background: var(--background-button-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-link:hover, .btn-link:focus
@@ -743,13 +771,11 @@ border-radius: 4px;
 
 .gallery-list .item {
     width: 370px;
-
+    border: 1px solid #EEEEEE;
     /* flex-basis: calc((100%-60px)/3); */
-    
-
     /* margin-right: 0px; */
     /* padding: 0px; */
-    border: 1px solid #EEEEEE;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* .gallery-list .item:nth-child(3n) { 
     margin-right: 0;
@@ -760,9 +786,37 @@ border-radius: 4px;
 background: var(--background-color);
 border: 1px solid #EEEEEE;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
+/*! --- модальне вікно --- */
 
+/*
 
+.для контейнера (батька) {
+
+}
+position: relatiwe;
+
+.дитина {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+}
+*/
+
+/* 
+
+cubic-bezier(0.4, 0, 0.2, 1);
+ */
+
+.proba {
+    transition: 1;
+}
 
 /*  live server   */
