--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,16 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.nav-studio::after, .nav-portfolio::after {
+    content: "";
+    position: absolute;
+    width: 48px;
+    height: 4px;
+
+    background: #2196F3;
+    border-radius: 2px;
+}
+
 .nav-contact {
 
     font-weight: 500;
@@ -783,11 +793,41 @@ border-radius: 4px;
 */
 
 .gallery-list .item:hover, .gallery-list .item:focus {
-background: var(--background-color);
-border: 1px solid #EEEEEE;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    background: var(--background-color);
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.item:hover .item-top-text {
+    transform: translateY(0);
+}
+
+.img-text-container {
+    position: relative;
+    overflow: hidden;
 
 }
+
+
+
+.item-top-text {
+    position: absolute;
+    top: 0;
+    transform: translateY(100%);
+    transition: 300ms linear;
+    overflow: auto;
+
+    padding: 61px 24px 65px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    border: 1px solid #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(33, 150, 243, 0.9);
+}
+
+
 
 /*! --- модальне вікно --- */
 
